# ocaml-include-c

./: cpp_generator.ml  dune  int16_bindings.c  int8_bindings.c  main.cpp  ptrs_bindings.c  readme.md  shared.h  test.h  uint16_bindings.c  uint32_bindings.c  uint64_bindings.c  uint8_bindings.c
test/: alcotest_helpers.ml  dune  test_bindings.ml  test_ints.ml
